# todo-api

./: .env.example  .pylintrc  Pipfile  Procfile  README.md  pyproject.toml  setup.cfg
todoapi/: asgi.py  settings.py  urls.py  wsgi.py
todoapi/api/: apps.py  serializers.py  views.py
todoapi/api/tests/: test_views.py
