[build-system]
# Minimum requirements for the build system to execute according to PEP 508
# specifications plus combination with what is required for tox
# here: https://tox.readthedocs.io/en/latest/example/basic.html
requires = ["setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = "todoapi"
addopts = [
    "--cache-clear",
    "-v",
    "--cov",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--mypy",
    "--pylint",
    "--pylint-rcfile=.pylintrc",
]

[mypy]
python_version = 3.10

check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true

plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main"
]

[tool.coverage.run]
source = ["./todoapi"]
branch = true
omit = [
    "*test*",
    "*__init__*",
    "*/settings.py",
    "*/asgi.py",
    "*/wsgi.py",
    "*/apps.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false

[tool.tox]
legacy_tox_ini = """
[tox]
#envlist = clean,py{35,36,37,38,39,310}-django{22,30,31,32}
# As django22 and django30 are giving strange errors related to Django code
# we will support from Django 3.1 and up.
# TODO: Keep testing with older versions of Python.
envlist = clean,py{39,310}-django{31,32}
isolated_build = True

[testenv]
deps =
    django31: Django==3.1
    django32: Django==3.2
    djangorestframework
    python-decouple
    pytest
    pytest-django
    pylint
    mypy
    bandit
    coverage[toml]
    pytest-cov
    pytest-pylint
    pytest-mypy
    pytest-randomly
    django-stubs
    djangorestframework-stubs
    types-markdown
    types-requests
    pylint-django
    pytest-dotenv
    pytest-xdist
commands =
    bandit -r todoapi
    pytest

[testenv:clean]
deps = coverage[toml]
skip_install = true
commands = coverage erase
"""
