[aliases]
release = sdist bdist_wheel
test = pytest

[bdist_wheel]
universal = 1

[metadata]
name = todo-api
url = https://github.com/davidlag0/todo-api
project_urls =
    GitHub: repo = https://github.com/davidlag0/todo-api
description = todo API
long_description = file: README.md
long_description_content_type = text/markdown
author = David Laganière
author_email = contact@none
zip_safe = False
license_files = LICENSE
platforms = any
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: Freely Distributable
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.9
packages = find:
include_package_data = True

bandit_targets = .
bandit_recurse = true
bandit_conf_level = 1
bandit_sev_level = 1
bandit_exclude = ./.*
