[aliases]
release = sdist bdist_wheel
test = pytest

[bdist_wheel]
universal = 1

[metadata]
name = todo-api
version = 0.0.1
url = https://github.com/davidlag0/todo-api
project_urls =
    GitHub: repo = https://github.com/davidlag0/todo-api
description = todo API that works along with the todo front-end
long_description = file: README.md
long_description_content_type = text/markdown
keywords = todo, tasks
author = David Laganière
author_email = contact@none
license_files = LICENSE
platforms = any
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: Freely Distributable
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7
packages = find:
